small changes on variable names.

--- a/course_website/index.html
+++ b/course_website/index.html
@@ -14,7 +14,7 @@
 <label for="dark-mode-toggle" class="dark-mode-label">Dark Mode</label>
 
 <!-- ✅ 顶部导航栏 -->
-<div class="leftnavigation">
+<div class="navigation">
     <ul>
         <li><a href="index.html">Home🏠</a></li>
         <li><a href="calendar.html">Calendar🗓️</a></li>
