--- a/course_website/index.html
+++ b/course_website/index.html
@@ -14,17 +14,17 @@
 <label for="dark-mode-toggle" class="dark-mode-label">Dark Mode</label>
 
 <!-- ✅ 顶部导航栏 -->
-<div class="navigation">
+<div class="leftnavigation">
     <ul>
         <li><a href="index.html">Home🏠</a></li>
+        <li><a href="syllabus.html">Syllabus🚀</a></li>
         <li><a href="calendar.html">Calendar🗓️</a></li>
-        <li><a href="news.html"><span class="new-tag">NEW</span> News🆕</a></li>
         <li><a href="https://piazza.com/class/m5fmz9kzjo83yk">Piazza💡</a></li>
+        <li><a href="markus.html">Markus🗂️</a></li>
         <li><a href="lectures.html">Lectures👩‍🏫</a></li>
         <li><a href="labs.html">Labs👩‍💻</a></li>
         <li><a href="assignments.html">Assignments✍️</a></li>
-        <li><a href="tests.html">Tests💯</a></li>
-        <li><a href="resources.html">Resources🗂️</a></li>
+        <li><a href="resources.html">Course Team🙋‍♀️🙋‍♀️</a></li>
         <li><a href="anon_feedback.html">Anon Feedback😉</a></li>
     </ul>
 </div>
