--- a/course_website/index.html
+++ b/course_website/index.html
@@ -16,7 +16,7 @@
 <!-- ✅ 顶部导航栏 -->
 <div class="leftnavigation">
     <ul>
-        <li><a href="index.html">Home🏠</a></li>
+        <li><a href="index.html"><span>Home 🏠</span></a></li>
         <li><a href="syllabus.html">Syllabus🚀</a></li>
         <li><a href="calendar.html">Calendar🗓️</a></li>
         <li><a href="https://piazza.com/class/m5fmz9kzjo83yk">Piazza💡</a></li>
@@ -29,6 +29,8 @@
     </ul>
 </div>
 
+<div class="background1"></div>
+
 <header1>
     <h1>CSCB20 &mdash; Introduction to Databases and Web Applications: Winter 2025</h1>
 </header1>
@@ -38,9 +40,11 @@
   <h2>Welcome😊</h2>
     </header>
 
-    Welcome to the course webpage for the Winter 2025 term of CSCB20 - Introduction to Databases and Web Applications.
+    This course provides a hands-on introduction to databases and web application development. You will gain both theoretical knowledge and practical skills to build a solid foundation in these areas.
 
 </section>
+
+<div class="background2"></div>
 
 <!-- 📝 主要内容区 -->
 <div class="content"> 
