--- a/course_website/index.html
+++ b/course_website/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +21,7 @@
         <li><a href="syllabus.html">Syllabus🚀</a></li>
         <li><a href="calendar.html">Calendar🗓️</a></li>
         <li><a href="https://piazza.com/class/m5fmz9kzjo83yk">Piazza💡</a></li>
-        <li><a href="markus.html">Markus🗂️</a></li>
+        <li><a href="https://markus2.utsc.utoronto.ca/courses/34/assignments">Markus🗂️</a></li>
         <li><a href="lectures.html">Lectures👩‍🏫</a></li>
         <li><a href="labs.html">Labs👩‍💻</a></li>
         <li><a href="assignments.html">Assignments✍️</a></li>
@@ -30,10 +31,10 @@
 </div>
 
 <div class="background1"></div>
-
-<header1>
+<header class="course-title">
     <h1>CSCB20 &mdash; Introduction to Databases and Web Applications: Winter 2025</h1>
-</header1>
+</header>
+
 
 <section>
     <header>
@@ -59,9 +60,6 @@
 
     <h2>Instructor</h2>
     <table class="borderless">
-        <thead>
-            <tr><th>Instructor</th><th>Details</th></tr>
-        </thead>
         <tbody>
             <tr><td>Shuqing Tu</td><td>Email: <a href="mailto:shuqing.tu@mail.utoronto.ca">shuqing.tu@mail.utoronto.ca</a></td></tr>
             <tr><td>Office:</td><td>IC493</td></tr>
@@ -69,6 +67,9 @@
         </tbody>
     </table>
 </div>
-
+<footer>
+    <p>© 2025 CSCB20 Course Website | <a href="https://web.cs.toronto.edu/">Faculty of Computer Science at UofT</a></p>
+    <p>Site design by Shuqing Tu and Yiqin Gao</p>
+</footer>
 </body>
 </html>
