--- a/course_website/lectures.html
+++ b/course_website/lectures.html
@@ -10,6 +10,11 @@
 <div class="background1"></div>
 
 <body>
+    <div class="background"></div>
+    <!-- ✅ Dark Mode 按钮 -->
+    <input type="checkbox" id="dark-mode-toggle">
+    <label for="dark-mode-toggle" class="dark-mode-label">Dark Mode</label>
+
     <div class="content">
         <div class="leftnavigation">
             <ul>
@@ -90,6 +95,7 @@
         <div class="pdf-links">
             <a href = "pdfs/ReLax_query_examples_inclass_week2.txt">ReLax query examples inclass</a>
             <a href ="pdfs/univdb-sqlite.db">Database we are working with</a>
+            <a href = "pdfs/Relational Algebra Division.pdf">Every, All Keyword - Division Operator in RA</a>
         </div>
       </td>
       <td>
@@ -104,11 +110,44 @@
       <td>
         SQL Queries
       </td>
+      <td>
+        <div class="pdf-links">
+            <a href ="pdfs/Week 3 -  SQL (1).pdf">Week3 Lecture Notes</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/univdb-sqlite-1.db">Database used during lecture</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href=" https://validator.w3.org/">HTML Resources</a>
+            <a href="https://flask.palletsprojects.com/en/2.3.x/">Python Flask Resources1</a>
+            <a href="https://docs.python.org/3/library/venv.html">Python Flask Resources2</a>
+        </div>
+      </td>
         </tr>
         <tr>
       <td>Feb 3-7</td>
       <td>
         SQL subqueries and Introduction to Web Development
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href ="pdfs/SQL-Subqueries (3).pdf">Week4 Lecture Notes</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/univdb-sqlite-1.db">Database1 used during lecture</a>
+            <a href="pdfs/myuni.db">Database2 used during lecture</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/RA_Algorithms-1.pdf">RA Notes summary-Prepared by Rick</a>
+        </div>
       </td>
         </tr>
         <tr>
@@ -116,59 +155,104 @@
       <td>
         Introduction to Flask, Introduction to HTML and CSS
       </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/Week 5 - Introduction to Web Development (1).pdf">Week5 Lecture Notes</a>
+            <a href="pdfs/All about Flask-1.pdf">All about Flask</a>
+            <a href="pdfs/_Python Flask Project.pdf">Python Flask Project</a>
+        </div>
+      </td>
+      <td></td>
+      <td>
+        <div class="pdf-links">
+            <a href="https://validator.w3.org/">HTML Validator </a>
+            <a href="https://code.visualstudio.com/download">VS Code</a>
+            <a href="https://flask.palletsprojects.com/en/2.0.x/installation/">Python Flask</a>
+        </div>
+      </td>
         </tr>
         <tr>
       <td>Feb 17-21</td>
       <td>
         READING WEEK
       </td>
+      <td>
+        ENJOY!
+      </td>
+      <td></td>
+      <td></td>
         </tr>
         <tr>
       <td>Feb 24-28</td>
       <td>
         Mid Term Exam
       </td>
+      <td>
+        <div class="pdf-links">
+            <a href="https://utoronto-my.sharepoint.com/:v:/g/personal/purva_gawde_utoronto_ca/EQjFqPyUsbpCiTAAAbWXEeMB2Gei55E3g3F1TAslHAD20g?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=5pn4Tc">HTML Recorded Lecture</a>
+            <a href="https://utoronto-my.sharepoint.com/:v:/g/personal/purva_gawde_utoronto_ca/ES-2XCEk0R1BiJGrw1Q1KmkB7TpBhFN-NqQWtUi5Hk4gDA?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=Go4crS">CSS flexbox and grid layout Recorded Lecture</a>
+            <a href="pdfs/Week 6 - HTML and CSS (1).pdf">Notes to read before next week's lecture</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="https://utoronto-my.sharepoint.com/:f:/g/personal/purva_gawde_utoronto_ca/EiyXgexu1dtBovX0brihpfgBrcOQLXyN8gJ7EV7TuM5m1g?e=Yf9xkm">HTML and CSS Code Handouts</a>
+            <a href="https://utoronto-my.sharepoint.com/:f:/g/personal/purva_gawde_utoronto_ca/EqbaOIFr-phIonijcIKcP88B-5IREBscGngWPxaSuDciXw?e=1kuqKS">Flexbox Code Handouts</a>
+            <a href="https://utoronto-my.sharepoint.com/:f:/g/personal/purva_gawde_utoronto_ca/Ejj1TL1isSNMnbZ9etfBhRMBfo-nRmXvUPT3QCNUyVg57w?e=V84bTN">Grid Code Handouts</a>
+        </div>
+      </td>
+      <td></td>
         </tr>
         <tr>
       <td>Mar 3-7</td>
       <td>
         Media Queries, Introduction to JavaScript
       </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/Week 7.pdf">Week7 Lecture Notes</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="pdfs/jsWeek7InClass.zip">Code Handouts</a>
+        </div>
+      </td>
+      <td>
+        <div class="pdf-links">
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide">JavaScript Documentation</a>
+        </div>
+      </td>
         </tr>
         <tr>
       <td>Mar 10-14</td>
       <td>
-        Flask and SQL
       </td>
+      <td></td>
+      <td></td>
+      <td></td>
         </tr>
         <tr>
       <td>Mar 17-21</td>
       <td>
 
       </td>
+      <td></td>
+      <td></td>
         </tr>
         <tr>
       <td>Mar 24-28</td>
-      <td>
-  <!--	  <ul>
-          <li>Tutorial material on <a href="content/week11/tutorial09.pdf">Fibonacci heaps</a></li>
-          <li>Quicksort pre-lecture <a href="content/week11/w11_quicksort_pre.pdf">slides</a></li>
-          <li>Quicksort post-lecture <a href="content/week11/w11_quicksort_post.pdf">slides</a></li>
-          <li>CLRS Chapters: 19 in 3rd ed.; 7 in both eds</li>
-        </ul>
-  -->	</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
         </tr>
         <tr>
       <td>Mar 31 - Apr 4</td>
-      <td>
-  <!--	  <ul>
-          <li>This week's <a href="content/week12/tutorial10_pre.pdf">tutorial questions</a></li>
-          <li>This week's <a href="content/week12/tutorial10_post.pdf">tutorial solutions</a></li>
-          <li>CLRS Chapters: 11 in both eds</li>
-          <li>Hashing pre-lecture <a href="content/week12/w12_hashing_pre.pdf">slides</a></li>
-          <li>Hashing post-lecture <a href="content/week12/w12_hashing_post.pdf">slides</a></li>
-        </ul>
-  -->	</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
         </tr>
       
     </table>
