small adjustion on syllabus deliver way

--- a/course_website/lectures.html
+++ b/course_website/lectures.html
@@ -259,7 +259,7 @@
 
     </div>
     <footer>
-        <p>© 2025 CSCB20 Course Website | <a href="https://web.cs.toronto.edu/">Faculty of Computer Science at UofT</a></p>
+        <p>© 2025 CSCB20 Course Website | <a href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science at UofT</a></p>
         <p>Site design by Shuqing Tu and Yiqin Gao</p>
     </footer>
 
