--- a/course_website/syllabus.html
+++ b/course_website/syllabus.html
@@ -23,17 +23,14 @@
             <li><a href="anon_feedback.html">Anon Feedback😉</a></li>
         </ul>
     </div>
-
-    <div class="content">
-        <header>
-            <h1>CSC B20 &mdash; Syllabus</h1>
-        </header>
-        
-        <p><a href="https://drive.google.com/file/d/1P9UncY8tMVzNhJ2a6sts1Nvz_njeh5jx/view?usp=sharing" target="_blank">Syllabus</a></p>
+    
+    <div class="pdf-links">
+            <a href = "pdfs/Syllabus.pdf">Syllabus</a>
     </div>
 
+
     <footer>
-        <p>© 2025 CSCB20 Course Website | <a href="https://web.cs.toronto.edu/">Faculty of Computer Science at UofT</a></p>
+        <p>© 2025 CSCB20 Course Website | <a href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science at UofT</a></p>
         <p>Site design by Shuqing Tu and Yiqin Gao</p>
     </footer>
 </body>
