--- a/course_website/calendar.html
+++ b/course_website/calendar.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2025 CSCB20 Course Website | <a href="https://web.cs.toronto.edu/">Faculty of Computer Science at UofT</a></p>
+        <p>© 2025 CSCB20 Course Website | <a href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science at UofT</a></p>
         <p>Site design by Shuqing Tu and Yiqin Gao</p>
     </footer>
 </body>
