--- a/course_website/lectures.html
+++ b/course_website/lectures.html
@@ -7,8 +7,6 @@
 </head>
 
 
-<div class="background1"></div>
-
 <body>
     <div class="background"></div>
     <!-- ✅ Dark Mode 按钮 -->
@@ -30,10 +28,10 @@
                 <li><a href="anon_feedback.html">Anon Feedback😉</a></li>
             </ul>
         </div>
-        <header>
-            <h1>CSC B20 &mdash; Lecture Materials</h1>
+        <header class="lectures-header">
+            <h1>Lecture Materials</h1>
+            <p>Here you can find all lecture notes, in-class activities, and resources.</p>
         </header>
-        
         <table>
             <tr>
                 <th width="46">Week</th>
