modify markus link for lectures and labs page

--- a/course_website/lectures.html
+++ b/course_website/lectures.html
@@ -20,7 +20,7 @@
                 <li><a href="syllabus.html">Syllabus🚀</a></li>
                 <li><a href="calendar.html">Calendar🗓️</a></li>
                 <li><a href="https://piazza.com/class/m5fmz9kzjo83yk">Piazza💡</a></li>
-                <li><a href="markus.html">Markus🗂️</a></li>
+                <li><a href="https://markus2.utsc.utoronto.ca/courses/34/assignments">Markus🗂️</a></li>
                 <li><a href="lectures.html"><span>Lectures👩‍🏫</span></a></li>
                 <li><a href="labs.html">Labs👩‍💻</a></li>
                 <li><a href="assignments.html">Assignments✍️</a></li>
