--- a/course_website/syllabus.html
+++ b/course_website/syllabus.html
@@ -24,8 +24,30 @@
         </ul>
     </div>
     
-    <div class="pdf-links">
-            <a href = "pdfs/Syllabus.pdf">Syllabus</a>
+    <header class="syllabus-header">
+        <h1>📚 CSCB20 Course Syllabus</h1>
+        <p>Find the complete syllabus, grading policy, and course overview.</p>
+    </header>
+
+     <div class="syllabus-container">
+        <div class="syllabus-info">
+            <h2>📌 Course Overview</h2>
+            <p>This course provides an introduction to databases and web development.</p>
+            <br>
+            <ul>
+                <li>Learn about relational databases, SQL, and database design.</li>
+                <br>
+                <li>Develop web applications using HTML, CSS, and JavaScript.</li>
+                <br>
+                <li>Understand how to integrate databases with web applications.</li>
+            </ul>
+        </div>
+
+        <div class="syllabus-download">
+            <h2>📄 Full Syllabus (PDF)</h2>
+            <p>Click the button below to download the complete syllabus.</p><br>
+            <a href="pdfs/Syllabus.pdf" class="syllabus-link">📥 Download Syllabus</a>
+        </div>
     </div>
 
 
