--- a/course_website/resources.html
+++ b/course_website/resources.html
@@ -9,12 +9,9 @@
 
 <body>
 
-
-<!-- ✅ Dark Mode 按钮 -->
 <input type="checkbox" id="dark-mode-toggle">
 <label for="dark-mode-toggle" class="dark-mode-label">Dark Mode</label>
 
-<!-- ✅ 顶部导航栏 -->
 <div class="leftnavigation">
     <ul>
         <li><a href="index.html">Home 🏠</a></li>
@@ -31,6 +28,7 @@
 </div>
 <header class="course-title">
     <h1>Course Team</h1>
+    <p >Meet the dedicated instructors who are here to support your learning journey.</p>
 </header>
 
 
