adjusting titles to fit every screen size

--- a/course_website/calendar.html
+++ b/course_website/calendar.html
@@ -13,7 +13,6 @@
 <label for="dark-mode-toggle" class="dark-mode-label">Dark Mode</label>
 
 <body>
-    <div class="content">
         <div class="leftnavigation">
             <ul>
                 <li><a href="index.html">Home 🏠</a></li>
@@ -28,8 +27,11 @@
                 <li><a href="anon_feedback.html">Anon Feedback😉</a></li>
             </ul>
         </div>
-        <header>
+
+
+        <header class="course-title">
             <h1>CSC B20 &mdash; Calendar</h1>
+            <p>Check important dates for lectures, assignments, exams, and more—all in one place!</p>
         </header>
         
         
@@ -37,7 +39,7 @@
             <h2>Course Calendar</h2>
             <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FToronto&showPrint=0&src=eXFnYmV0YTcxMUBnbWFpbC5jb20&src=MDQxMTNlYjVjYzJkOTFmYTM0MjZiMDk5MjE2ZDUzOTY3Yzk5YTk3MTgwY2Y3YmQ3OWY0MmJlZjNkZmI5ZDJhY0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%23D81B60" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
-    </div>
+
     <footer>
         <p>© 2025 CSCB20 Course Website | <a href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science at UofT</a></p>
         <p>Site design by Shuqing Tu and Yiqin Gao</p>
