--- a/course_website/resources.html
+++ b/course_website/resources.html
@@ -31,7 +31,7 @@
     <p >Meet the dedicated instructors who are here to support your learning journey.</p>
 </header>
 
-
+<div class = "content">
 <section>
     <div class="image-gallery">
         <div class="image-row">
@@ -89,7 +89,7 @@
     </div>
     
 </section>
-
+</div>
 <footer>
     <p>© 2025 CSCB20 Course Website | <a href="https://www.utsc.utoronto.ca/cms/computer-science">Faculty of Computer Science at UofT</a></p>
     <p>Site design by Shuqing Tu and Yiqin Gao</p>
